--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio Webpage</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="/images/png-transparent-portfolio-briefcase-showcase-business-adobe-portfolio-adobe-family-software-icon.png" type="image/x-icon">
 </head>
 <body>
     <nav class="navbar">
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#resume">Resume</a></li>
-            <li><a href="#contact">Contact</a></li>
+        <ul class="navbar-links">
+            <li><a href="#home" target="_blank">Home</a></li>
+            <li><a href="#about" target="_blank">About</a></li>
+            <li><a href="#work" target="_blank">Work</a></li>
+            <li><a href="#resume" target="_blank">Resume</a></li>
+            <li><a href="#contact" target="_blank">Contact</a></li>
         </ul>
     </nav>
     <!-- USE OF SEMANTIC TAG-->
@@ -52,16 +52,18 @@
     </section>
     <section id="contact">
         <h3>Contact Me</h3>
-        <form>
+        <form method="post">
             <label>Name:</label>
             <input type="name" placeholder="Your name">
+            <br>
 
             <label>Email:</label>
             <input type="email" placeholder="Your email">
+            <br> <br>
 
             <label>Message:</label>
-            <input type="text" placeholder="Type your message here">
-            <textarea name="message" cols="30" rows="3"></textarea>
+            <textarea name="message" cols="20" rows="3"></textarea>
+            
 
             <button type="submit">Send Message</button>
         </form>
@@ -73,7 +75,3 @@
     
 </body>
 </html>
-
-
-git config --global user.email "hakeem2580@outlook.com"
-git config --global user.name "hak-art"
